feat: added new ui/ux theme

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -15,39 +15,50 @@
       "source": [
         "\n",
         "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![](https://dcbadge.vercel.app/api/shield/931591564424253512?style=flat)](https://lookup.guru/931591564424253512) [![ko-fi](https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat)](https://ko-fi.com/linaqruf) <a href=\"https://saweria.co/linaqruf\"><img alt=\"Saweria\" src=\"https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\"/></a>\n",
-        "# **Cagliostro Colab UI**\n",
-        "All-in-One, Customizable and Flexible Stable Diffusion Web UI for Google Colab\n",
         "\n",
-        "<small><font color=gray> You can find latest notebook update [here](https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb)</small></font>\n",
+        "# **Cagliostro Colab UI**\n",
+        "All-in-One, Customizable and Flexible Stable Diffusion Web UI for Google Colab. <br>\n",
+        "You can find latest notebook update [here](https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb)\n",
         "\n",
         "<details>\n",
         "  <summary><big>Credits</big></summary>\n",
-        "\tThis colab notebook was heavily inspired by:\n",
-        "\n",
-        "- <small>[Nocrypt's Colab Remastered](https://colab.research.google.com/drive/1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq)</small>\n",
-        "- <small>[Acheong's Diffusion Web UI](https://colab.research.google.com/github/acheong08/Diffusion-ColabUI/blob/main/Diffusion_WebUI.ipynb)</small>\n",
-        "- <small>[TheLastBen's Fast Stable Diffusion](https://colab.research.google.com/github/TheLastBen/fast-stable-diffusion/blob/main/fast_stable_diffusion_AUTOMATIC1111.ipynb)</small>\n",
-        "\n",
+        "    This colab notebook was heavily inspired by:\n",
+        "    <ul>\n",
+        "      <li><small><a href=\"https://colab.research.google.com/drive/1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq\">Nocrypt's Colab Remastered</a></small></li>\n",
+        "      <li><small><a href=\"https://colab.research.google.com/github/acheong08/Diffusion-ColabUI/blob/main/Diffusion_WebUI.ipynb\">Acheong's Diffusion Web UI</a></small></li>\n",
+        "      <li><small><a href=\"https://colab.research.google.com/github/TheLastBen/fast-stable-diffusion/blob/main/fast_stable_diffusion_AUTOMATIC1111.ipynb\">TheLastBen's Fast Stable Diffusion</a></small></li>\n",
+        "    </ul>\n",
         "</details>\n",
         "\n",
         "<details>\n",
-        "  <summary><big>What's new <small><font color=gray>v.1.2.2 (23/02/23)<small></big></summary>\n",
-        "\n",
-        "- Added support for `multi-controlnet` by adding slider in certain cell (default: `2`).\n",
-        "- Backup all ControlNet annotator and model to personal repo.\n",
-        "- Added `tqdm` to track your installation, unpacking, and download progress because original logs are disabled.\n",
-        "- Pulled latest version of repo and built-in extension\n",
-        "- ControlNet annotator/preprocessor are now pre-downloaded.\n",
-        "- Added T2I Adapter model from TencentArc.\n",
-        "- Good custom upscalers such as `4x-Animesharp, 4x-UltraSharp, Lollypop, etc`. are now built-in.\n",
-        "- Added Video Loopback extension for making videos in Img2img because they now support ControlNet.\n",
-        "- Deleted CivitAI browser extension because there is another extension that does the same thing, sd-filer. You can download models, lora, and embeddings from the webui.\n",
-        "- Added Katanuki extension to convert your result to a transparent image.\n",
-        "- Deleted Haku Img Extensions because Idk, barely used it\n",
-        "- Added 'use old karras scheduler' to quick settings (header)\n",
-        "- Fixed invalid URL for chillout mix pruned and sd 1.5 pruned.\n",
-        "- Fixed 'download generated images' cell when creating a duplicate zip from 'output.zip(1)' to 'output(n+1).zip'.\n",
-        "- Added checkboxes for randomly selecting VAE and Model.</small>\n"
+        "  <summary><big>What's New?</big></summary>\n",
+        "  <br>\n",
+        "<font color=gray>v.1.2.2 (23/02/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Changed how the installation works. If the folder exists, then skip unpacking.</li>\n",
+        "    <li>Added <code>Replicant V1.0</code> as default model.</li>\n",
+        "    <li>Added new UI/UX theme from <a href \"https://github.com/anapnoe/stable-diffusion-webui\">Anapnoe</a>. <code>[Experimental]</code> </li>\n",
+        "    <li>Added support for <code>multi-controlnet</code> by including a slider in certain cells (default value: <code>2</code>).</li>\n",
+        "    <li>Backed up all ControlNet annotator and model data to a personal repository.</li>\n",
+        "  </ul>\n",
+        "  <br>\n",
+        "<font color=gray>v.1.2.1 (21/02/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Added <code>tqdm</code> to track installation, unpacking, and download progress since original logs are disabled.</li>\n",
+        "    <li>Pulled the latest version of the repository and built-in extensions.</li>\n",
+        "    <li>Pre-downloaded ControlNet annotator/preprocessor.</li>\n",
+        "    <li>Added T2I Adapter model from TencentArc.</li>\n",
+        "    <li>Added several good custom upscalers such as <code>4x-Animesharp</code>, <code>4x-UltraSharp</code>, <code>Lollypop</code>, and others.</li>\n",
+        "    <li>Added Video Loopback extension for creating videos in Img2img, now with ControlNet support.</li>\n",
+        "    <li>Deleted CivitAI browser extension because another extension called <code>sd-filer</code> serves the same purpose. You can download models, lora, and embeddings from the web UI.</li>\n",
+        "    <li>Added Katanuki extension to convert results to transparent images.</li>\n",
+        "    <li>Deleted Haku Img Extensions because they were rarely used.</li>\n",
+        "    <li>Added 'Use Old Karras Scheduler' option to quick settings (header).</li>\n",
+        "    <li>Fixed an invalid URL for Chillout Mix Pruned and SD 1.5 Pruned.</li>\n",
+        "    <li>Fixed the 'Download Generated Images' cell when creating a duplicate zip from 'output.zip(1)' to 'output(n+1).zip'.</li>\n",
+        "    <li>Added checkboxes for randomly selecting VAE and Model.</li>\n",
+        "  </ul>\n",
+        "</details>\n"
       ],
       "metadata": {
         "id": "WgQr3s96015a"
@@ -98,11 +109,13 @@
         "\n",
         "#@markdown ### Repo Config\n",
         "git_pull = False #@param {type:'boolean'}\n",
+        "clean_install = False #@param {type:'boolean'}\n",
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
         "merge_in_vram = True #@param {type:'boolean'}\n",
         "colab_optimizations = True #@param {type:'boolean'}\n",
-        "pre_download_annotator = True #@param {type:'boolean'}\n",
-        "\n",
+        "pre_download_annotator = False #@param {type:'boolean'}\n",
+        "#@markdown ### Experimental\n",
+        "try_new_ui_ux = False #@param {type:'boolean'}\n",
         "#@markdown ### Built-In Extensions Config\n",
         "update_extensions = True #@param {type:'boolean'}\n",
         "\n",
@@ -164,7 +177,14 @@
         "start_install = int(time.time())\n",
         "print(\"\u001b[1;32mInstalling...\\n\", end= \"\")\n",
         "ubuntu_deps(\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/deb-libs.zip\", \"deb-libs.zip\", deps_dir)\n",
-        "pre_download()\n",
+        "if clean_install:\n",
+        "  if os.path.exists(repo_dir):\n",
+        "    print(\"\u001b[1;32mUninstall current Web UI...\")\n",
+        "    shutil.rmtree(repo_dir)\n",
+        "    pre_download()\n",
+        "else:\n",
+        "  if not os.path.exists(repo_dir):\n",
+        "    pre_download()\n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  if git_pull:\n",
@@ -182,7 +202,6 @@
         "\n",
         "  if merge_in_vram:\n",
         "    !sed -i \"s@'cpu'@'cuda'@\" /content/stable-diffusion-webui/modules/extras.py\n",
-        "\n",
         "  del cap\n",
         "\n",
         "if pre_download_annotator:\n",
@@ -218,6 +237,16 @@
         "      shutil.copy(annotator_src, os.path.join(segmentation_path, annotator_name))\n",
         "      shutil.move(annotator_src, annotator_dst)\n",
         "\n",
+        "if try_new_ui_ux:\n",
+        "  print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
+        "  with capture.capture_output() as cap:\n",
+        "    os.chdir(repo_dir)\n",
+        "    if os.path.exists(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\")):\n",
+        "      os.remove(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\"))\n",
+        "    !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
+        "    !git pull\n",
+        "    del cap\n",
+        "\n",
         "install_time = timedelta(seconds=time.time()-start_install)\n",
         "print(\"\u001b[1;32mFinished unpacking. Took\",\"%02d:%02d:%02d \\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
         "\n",
@@ -235,11 +264,12 @@
         "        if \"Already up to date.\" not in output:\n",
         "          extensions_updated.append(dir)\n",
         "        pbar.update(1)\n",
+        "  print(\"\\n\")\n",
         "  for ext in extensions_updated:\n",
-        "    print(f\"\\n\u001b[1;32m{ext} updated to new version\")\n",
+        "    print(f\"\u001b[1;32m{ext} updated to new version\")\n",
         "\n",
         "  update_time = timedelta(seconds=time.time()-update)\n",
-        "  print(\"\\n\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d \\n\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
+        "  print(\"\\n\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
         "\n",
         "print('\\n\u001b[1;32mAll is done! Go to the next step.')"
       ],
@@ -264,11 +294,11 @@
         "os.chdir(root_dir)\n",
         "#@markdown ### Available Model\n",
         "anything_v3_2 = False #@param {type: 'boolean'}\n",
-        "anything_v3_3 = True #@param {type: 'boolean'}\n",
+        "anything_v3_3 = False #@param {type: 'boolean'}\n",
         "hitokomoru_v1_5 = False #@param {type: 'boolean'}\n",
         "pastelmix = False #@param {type: 'boolean'}\n",
         "waifu_diffusion_v1_4_e2 = False #@param {type: 'boolean'}\n",
-        "replicant_v1 = False #@param {type: 'boolean'}\n",
+        "replicant_v1 = True #@param {type: 'boolean'}\n",
         "chillout_mix = False #@param {type: 'boolean'}\n",
         "illuminati_diffusion = False #@param {type: 'boolean'}\n",
         "stable_diffusion_v1_5 = False #@param {type: 'boolean'}\n",
