fix: added precaution, current controlnet model is SDv1 based

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -107,15 +107,17 @@
         "# url or path\n",
         "A100 = \"https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103.ColabProA100-cp38-cp38-linux_x86_64.whl\"\n",
         "\n",
+        "#@markdown ### Experimental\n",
+        "try_new_ui_ux = False #@param {type:'boolean'}\n",
+        "\n",
         "#@markdown ### Repo Config\n",
         "git_pull = False #@param {type:'boolean'}\n",
         "clean_install = False #@param {type:'boolean'}\n",
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
         "merge_in_vram = True #@param {type:'boolean'}\n",
         "colab_optimizations = True #@param {type:'boolean'}\n",
-        "pre_download_annotator = False #@param {type:'boolean'}\n",
-        "#@markdown ### Experimental\n",
-        "try_new_ui_ux = False #@param {type:'boolean'}\n",
+        "pre_download_annotator = True #@param {type:'boolean'}\n",
+        "\n",
         "#@markdown ### Built-In Extensions Config\n",
         "update_extensions = True #@param {type:'boolean'}\n",
         "\n",
@@ -186,6 +188,21 @@
         "  if not os.path.exists(repo_dir):\n",
         "    pre_download()\n",
         "\n",
+        "if try_new_ui_ux:\n",
+        "  print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
+        "  with capture.capture_output() as cap:\n",
+        "    os.chdir(repo_dir)\n",
+        "    if os.path.exists(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\")):\n",
+        "      os.remove(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\"))\n",
+        "    !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
+        "    !git pull\n",
+        "    del cap\n",
+        "  # temporary fix\n",
+        "  more2fill = \"/content/stable-diffusion-webui/html/svg/more-2-fill.svg\"\n",
+        "  \n",
+        "  if not os.path.exists(more2fill):\n",
+        "    shutil.copy(os.path.join(os.path.dirname(more2fill),\"cpu-fill.svg\"), more2fill)\n",
+        "\n",
         "with capture.capture_output() as cap:\n",
         "  if git_pull:\n",
         "    os.chdir(repo_dir)\n",
@@ -236,16 +253,6 @@
         "        os.remove(os.path.join(segmentation_path, annotator_name))\n",
         "      shutil.copy(annotator_src, os.path.join(segmentation_path, annotator_name))\n",
         "      shutil.move(annotator_src, annotator_dst)\n",
-        "\n",
-        "if try_new_ui_ux:\n",
-        "  print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
-        "  with capture.capture_output() as cap:\n",
-        "    os.chdir(repo_dir)\n",
-        "    if os.path.exists(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\")):\n",
-        "      os.remove(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\"))\n",
-        "    !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
-        "    !git pull\n",
-        "    del cap\n",
         "\n",
         "install_time = timedelta(seconds=time.time()-start_install)\n",
         "print(\"\u001b[1;32mFinished unpacking. Took\",\"%02d:%02d:%02d \\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
@@ -306,9 +313,12 @@
         "anime = True #@param {type: 'boolean'}\n",
         "waifu_diffusion = False #@param {type: 'boolean'}\n",
         "stable_diffusion = False #@param {type: 'boolean'}\n",
-        "#@markdown ### Bulk Download ControlNet Model (`fp16`)\n",
+        "#@markdown ### Available ControlNet Model\n",
+        "#@markdown All ControlNet model below is based on SDv1 model, so it doesn't work if your model is based on `SDv2 Base` and `SDv2 768v`. <br>\n",
+        "#@markdown `e.g.: Waifu DIffusion V1.4-V1.5, Illuminati Diffusion, and Replicant V1.0`\n",
+        "\n",
         "control_model = False #@param {type: 'boolean'}\n",
-        "diff_control_model = False #@param {type: 'boolean'}\n",
+        "diff_control_model = True #@param {type: 'boolean'}\n",
         "t2i_adapter_model = False #@param {type: 'boolean'}\n",
         "\n",
         "installModels = []\n",
