feat: added cell to upload output to huggingface

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -35,6 +35,7 @@
         "  <br>\n",
         "<font color=gray>v.1.2.2 (23/02/23)</font>\n",
         "  <ul>\n",
+        "    <li>Added <b>Extra</b> section for optional cell, the first cell added to the section is <b>Download Generated Images V2</b>, to store your output to huggingface and download it.</li>\n",
         "    <li>Changed how the installation works. If the folder exists, then skip unpacking.</li>\n",
         "    <li>Added <code>Replicant V1.0</code> as default model.</li>\n",
         "    <li>Added new UI/UX theme from <a href \"https://github.com/anapnoe/stable-diffusion-webui\">Anapnoe</a>. <code>[Experimental]</code> </li>\n",
@@ -267,6 +268,7 @@
         "        with capture.capture_output() as cap:\n",
         "          !git fetch origin\n",
         "          !git pull\n",
+        "          \n",
         "        output = cap.stdout.strip()\n",
         "        if \"Already up to date.\" not in output:\n",
         "          extensions_updated.append(dir)\n",
@@ -664,7 +666,7 @@
         "\n",
         "use_drive = True #@param {type:\"boolean\"}\n",
         "folder_name = \"AI-generated Art\" #@param {type: \"string\"}\n",
-        "filename = \"waifu.zip\" #@param {type: \"string\"}\n",
+        "filename = \"replicant.zip\" #@param {type: \"string\"}\n",
         "save_as = filename \n",
         "\n",
         "if os.path.exists(filename):\n",
@@ -717,6 +719,94 @@
       "metadata": {
         "cellView": "form",
         "id": "Ojb4nAieATxI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Extras"
+      ],
+      "metadata": {
+        "id": "4SUHPtGLz2m4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title ## **Download Generated Images V2**\n",
+        "from IPython.utils import capture\n",
+        "from huggingface_hub import login\n",
+        "from huggingface_hub import HfApi\n",
+        "from huggingface_hub.utils import validate_repo_id, HfHubHTTPError\n",
+        "import shutil\n",
+        "import os\n",
+        "\n",
+        "#@markdown Download your output by upload it to **Huggingface** instead of Google Drive.\n",
+        "#@markdown > Get **your** huggingface `WRITE` token [here](https://huggingface.co/settings/tokens)\n",
+        "write_token = \"\" #@param {type:\"string\"}\n",
+        "#@markdown Specify where is your repo located, it will automatically create your repo if you didn't have one.\n",
+        "repo_name = \"ai-art-dump\" #@param{type:\"string\"}\n",
+        "repo_name = repo_name.replace(\" \", \"-\")\n",
+        "private_repo = False #@param{type:\"boolean\"}\n",
+        "#@markdown This will be compressed to zip and uploaded to datasets repo\n",
+        "project_name = \"waifu\" #@param {type :\"string\"}\n",
+        "project_name = project_name.replace(\" \", \"_\")\n",
+        "\n",
+        "if not project_name:\n",
+        "  project_name = \"waifu\"\n",
+        "\n",
+        "output_dir = \"/content/stable-diffusion-webui/outputs\"\n",
+        "dataset_zip = project_name + \".zip\"\n",
+        "output_path = os.path.join(root_dir, dataset_zip)\n",
+        "commit_message = \"Feat: Upload \"+ dataset_zip +\" with Cagliostro Colab UI\"\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  login(write_token, add_to_git_credential=True) \n",
+        "output = cap.stdout.strip()\n",
+        "if \"Token is valid.\" in output:\n",
+        "  print(\"\u001b[1;32mLogin Succesful.\")\n",
+        "\n",
+        "api = HfApi()\n",
+        "user = api.whoami(write_token)\n",
+        "\n",
+        "datasets_repo = user['name']+\"/\"+repo_name.strip()\n",
+        "\n",
+        "if repo_name:\n",
+        "  try:\n",
+        "    validate_repo_id(datasets_repo)\n",
+        "    api.create_repo(repo_id=datasets_repo,\n",
+        "                    repo_type=\"dataset\",\n",
+        "                    private=private_repo)\n",
+        "    print(f\"\u001b[1;32mRepo created, located at https://huggingface.co/datasets/{datasets_repo}\")\n",
+        "\n",
+        "  except HfHubHTTPError as e:\n",
+        "    print(f\"\u001b[1;32mRepo exist, skipping...\")\n",
+        "\n",
+        "os.chdir(output_dir)\n",
+        "print(f\"\u001b[1;32mCompressing to ZIP...\")\n",
+        "with capture.capture_output() as cap:\n",
+        "  !zip -rv {output_path} .\n",
+        "\n",
+        "print(f\"\u001b[1;32mUploading generated images... Please wait...\")\n",
+        "\n",
+        "api.upload_file(\n",
+        "  path_or_fileobj=output_path,\n",
+        "  path_in_repo=dataset_zip,\n",
+        "  repo_id=datasets_repo,\n",
+        "  repo_type=\"dataset\",\n",
+        "  commit_message=commit_message,\n",
+        "  )\n",
+        "\n",
+        "print(f\"\u001b[1;32mUpload success, download directly at https://huggingface.co/datasets/{datasets_repo}/resolve/main/{dataset_zip}\")\n",
+        "\n",
+        "os.remove(output_path)\n",
+        "\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "EGXqJLXwnJQB"
       },
       "execution_count": null,
       "outputs": []
