feat: pushed v1.2.5, fix auto vae, added model and more

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -14,24 +14,50 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![](https://dcbadge.vercel.app/api/shield/931591564424253512?style=flat)](https://lookup.guru/931591564424253512) [![ko-fi](https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat)](https://ko-fi.com/linaqruf) <a href=\"https://saweria.co/linaqruf\"><img alt=\"Saweria\" src=\"https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\"/></a>\n",
+        "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![GitHub](https://badgen.net/badge/icon/github?icon=github&label)](https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb) \n",
         "\n",
         "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible Stable Diffusion Web UI for Google Colab. <br>\n",
-        "You can find latest notebook update [here](https://colab.research.google.com/github/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb)\n",
+        "\n",
+        "<details>\n",
+        "  <summary><big>Support Us!</big></summary>\n",
+        "    <ul>\n",
+        "      <li>\n",
+        "        <a href=\"https://ko-fi.com/linaqruf\">\n",
+        "          <img src=\"https://img.shields.io/badge/Support%20me%20on%20Ko--fi-F16061?logo=ko-fi&logoColor=white&style=flat\" alt=\"Ko-fi badge\">\n",
+        "        </a>\n",
+        "      </li>\n",
+        "      <li>\n",
+        "        <a href=\"https://saweria.co/linaqruf\">\n",
+        "          <img src=\"https://img.shields.io/badge/Saweria-7B3F00?style=flat&logo=ko-fi&logoColor=white\" alt=\"Saweria badge\">\n",
+        "        </a>\n",
+        "      </li>\n",
+        "    </ul>\n",
+        "</details>\n",
         "\n",
         "<details>\n",
         "  <summary><big>Credits</big></summary>\n",
         "    This colab notebook was heavily inspired by:\n",
         "    <ul>\n",
-        "      <li><small><a href=\"https://colab.research.google.com/drive/1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq\">Nocrypt's Colab Remastered</a></small></li>\n",
-        "      <li><small><a href=\"https://colab.research.google.com/github/acheong08/Diffusion-ColabUI/blob/main/Diffusion_WebUI.ipynb\">Acheong's Diffusion Web UI</a></small></li>\n",
-        "      <li><small><a href=\"https://colab.research.google.com/github/TheLastBen/fast-stable-diffusion/blob/main/fast_stable_diffusion_AUTOMATIC1111.ipynb\">TheLastBen's Fast Stable Diffusion</a></small></li>\n",
+        "      <li><a href=\"https://colab.research.google.com/drive/1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq\">Nocrypt's Colab Remastered</a></li>\n",
+        "      <li><a href=\"https://colab.research.google.com/github/acheong08/Diffusion-ColabUI/blob/main/Diffusion_WebUI.ipynb\">Acheong's Diffusion Web UI</a></li>\n",
+        "      <li><a href=\"https://colab.research.google.com/github/TheLastBen/fast-stable-diffusion/blob/main/fast_stable_diffusion_AUTOMATIC1111.ipynb\">TheLastBen's Fast Stable Diffusion</a></li>\n",
         "    </ul>\n",
         "</details>\n",
         "\n",
         "<details>\n",
         "  <summary><big>What's New?</big></summary>\n",
+        "<font color=gray>v.1.3 (01/03/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Moved support button to separated and hidden section, because it looks ugly.</li>\n",
+        "    <li>Updated dependencies, webui, and extensions to the latest version.</li>\n",
+        "    <li>Deleted <code>hitokomoru_v1_5</code>.</li>\n",
+        "    <li>Added <a href=\"https://huggingface.co/waifu-diffusion/wd-1-5-beta2\">WD 1.5 Beta 2 - Aesthetic</a>. Releases note: <a href=\"https://cafeai.notion.site/WD-1-5-Beta-2-Release-Notes-2852db5a9cdd456ba52fc5730b91acfd\">here</a></li>\n",
+        "    <li>Added <code>illuminati_diffusion_v1_1</code>. Required embeddings coming soon. </li>\n",
+        "    <li>Added <code>ref_slave_v2</code> and set it to default</li>    \n",
+        "    <li>Used <code>git reset</code> to move the head to <code>3cd625854f9dc71235a432703ba82abfc5d1a3fc</code> when <code>try_new_ui_ux</code> set to True, as it's a stable commit history for now.</li>\n",
+        "    <li>Added <code>t2iadapter_sketch-fp16.safetensors</code> to t2iadapter model list.</li>\n",
+        "  </ul>\n",
         "  <br>\n",
         "<font color=gray>v.1.2.2 (23/02/23)</font>\n",
         "  <ul>\n",
@@ -109,7 +135,7 @@
         "A100 = \"https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103.ColabProA100-cp38-cp38-linux_x86_64.whl\"\n",
         "\n",
         "#@markdown ### Experimental\n",
-        "try_new_ui_ux = False #@param {type:'boolean'}\n",
+        "try_new_ui_ux = True #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Repo Config\n",
         "git_pull = False #@param {type:'boolean'}\n",
@@ -197,6 +223,7 @@
         "      os.remove(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\"))\n",
         "    !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
         "    !git pull\n",
+        "    !git reset --hard 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
         "    del cap\n",
         "  # temporary fix\n",
         "  more2fill = \"/content/stable-diffusion-webui/html/svg/more-2-fill.svg\"\n",
@@ -301,16 +328,17 @@
         "%store -r\n",
         "\n",
         "os.chdir(root_dir)\n",
-        "#@markdown ### Available Model\n",
+        "#@markdown ### Available SD v1.x Model\n",
         "anything_v3_2 = False #@param {type: 'boolean'}\n",
         "anything_v3_3 = False #@param {type: 'boolean'}\n",
-        "hitokomoru_v1_5 = False #@param {type: 'boolean'}\n",
+        "ref_slave_v2 = True #@param {type: 'boolean'}\n",
         "pastelmix = False #@param {type: 'boolean'}\n",
-        "waifu_diffusion_v1_4_e2 = False #@param {type: 'boolean'}\n",
-        "replicant_v1 = True #@param {type: 'boolean'}\n",
         "chillout_mix = False #@param {type: 'boolean'}\n",
-        "illuminati_diffusion = False #@param {type: 'boolean'}\n",
         "stable_diffusion_v1_5 = False #@param {type: 'boolean'}\n",
+        "#@markdown ### Available SD v2.x 768v Model\n",
+        "replicant_v1 = False #@param {type: 'boolean'}\n",
+        "illuminati_diffusion_v1_1 = False #@param {type: 'boolean'}\n",
+        "waifu_diffusion_v1_5_e2_aesthetic = False #@param {type: 'boolean'}\n",
         "#@markdown ### Available VAE\n",
         "anime = True #@param {type: 'boolean'}\n",
         "waifu_diffusion = False #@param {type: 'boolean'}\n",
@@ -328,22 +356,22 @@
         "\n",
         "modelList = [\"anything_v3_2\",\n",
         "             \"anything_v3_3\",\n",
-        "             \"hitokomoru_v1_5\",\n",
+        "             \"ref_slave_v2\",\n",
         "             \"pastelmix\",\n",
-        "             \"waifu_diffusion_v1_4_e2\",\n",
-        "             \"replicant_v1\",\n",
-        "             \"chillout_mix\",\n",
-        "             \"illuminati_diffusion\",\n",
-        "             \"stable_diffusion_v1_5\"]\n",
+        "             \"chillout_mix\",           \n",
+        "             \"stable_diffusion_v1_5\",\n",
+        "             \"replicant_v1\",                          \n",
+        "             \"illuminati_diffusion_v1_1\",\n",
+        "             \"waifu_diffusion_v1_5_e2_aesthetic\"]\n",
         "modelUrl = [\"https://huggingface.co/cag/anything-v3-1/resolve/main/anything-v3-2.safetensors\",\n",
         "            \"https://huggingface.co/cag/anything-v3-3/resolve/main/anything-v3-3.safetensors\",\n",
-        "            \"https://huggingface.co/Linaqruf/hitokomoru-diffusion-v1-5/resolve/main/hitokomoru-v1-5.safetensors\",\n",
+        "            \"https://huggingface.co/AgraFL/RefSlave-V2/resolve/main/RefSlave-V2-FP16-VAEbaked.safetensors\",\n",
         "            \"https://huggingface.co/andite/pastel-mix/resolve/main/pastelmix-fp32.safetensors\", \n",
-        "            \"https://huggingface.co/saltacc/wd-1-4-anime/resolve/main/wd-1-4-epoch2-fp16.safetensors\",\n",
-        "            \"https://huggingface.co/gsdf/Replicant-V1.0/resolve/main/Replicant-V1.0_fp16.safetensors\",\n",
-        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/chillout_mix-pruned.safetensors\", \n",
-        "            \"https://huggingface.co/IlluminatiAI/Illuminati_Diffusion_v1.0/resolve/main/illuminati_diffusion_v1.0.safetensors\", \n",
-        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/stable_diffusion_1_5-pruned.safetensors\"]\n",
+        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/chillout_mix-pruned.safetensors\",\n",
+        "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/stable_diffusion_1_5-pruned.safetensors\",         \n",
+        "            \"https://huggingface.co/gsdf/Replicant-V1.0/resolve/main/Replicant-V1.0_fp16.safetensors\",             \n",
+        "            \"https://civitai.com/api/download/models/13259\",\n",
+        "            \"https://huggingface.co/waifu-diffusion/wd-1-5-beta2/resolve/main/checkpoints/wd-1-5-beta2-aesthetic-fp16.safetensors\"]\n",
         "\n",
         "vaeList = [\"anime\",\n",
         "           \"waifu_diffusion\",\n",
@@ -373,7 +401,8 @@
         "\n",
         "t2iAdapterUrl = [\"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_keypose-fp16.safetensors\",\n",
         "                 \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_seg-fp16.safetensors\",\n",
-        "                 \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_sketch-fp16.safetensors\"]\n",
+        "                 \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_sketch-fp16.safetensors\",\n",
+        "                 \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\"]\n",
         "\n",
         "for i, model in enumerate(modelList):\n",
         "    if locals()[model]: # if checkbox is checked\n",
@@ -393,9 +422,12 @@
         "  elif is_control:\n",
         "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {control_dir} -o {checkpoint_name} {url}\n",
         "  else:\n",
-        "    ext = \"ckpt\" if url.endswith(\".ckpt\") else \"safetensors\"\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {models_dir} -o {checkpoint_name}.{ext} {url}\n",
-        "\n",
+        "    if url.startswith(\"https://huggingface.co/\"):\n",
+        "      ext = \"ckpt\" if url.endswith(\".ckpt\") else \"safetensors\"\n",
+        "      !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {models_dir} -o {checkpoint_name}.{ext} {url}\n",
+        "    else:\n",
+        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {models_dir} {url}\n",
+        "      \n",
         "print(f\"\u001b[1;32mDownloading...\")\n",
         "downloading = int(time.time())\n",
         "\n",
@@ -603,8 +635,8 @@
         "medvram = False #@param {type: 'boolean'}\n",
         "load_in_vram = True #@param {type: 'boolean'}\n",
         "silent_launch = True #@param {type: 'boolean'}\n",
-        "auto_vae = True #@param {type: 'boolean'}\n",
-        "auto_model = True #@param {type: 'boolean'}\n",
+        "auto_vae = False #@param {type: 'boolean'}\n",
+        "auto_model = False #@param {type: 'boolean'}\n",
         "fix_black_result = True #@param {type: 'boolean'}\n",
         "additional_args = \"--xformers\" #@param {type: 'string'}\n",
         "\n",
@@ -613,16 +645,11 @@
         "  model_files = [f for f in models_list if f.endswith(('.ckpt','.safetensors'))]\n",
         "  if model_files:\n",
         "      model_path = os.path.join(models_dir, random.choice(model_files))\n",
-        "else:\n",
-        "  model_path = os.path.join(models_dir, \"anything-v3-3.safetensors\")\n",
-        "  \n",
         "if auto_vae:\n",
         "  vaes_list = os.listdir(vaes_dir)\n",
         "  vae_files = [f for f in vaes_list if f.endswith('.vae.pt')]\n",
         "  if vae_files:\n",
         "      vae_path = os.path.join(vaes_dir, random.choice(vae_files))\n",
-        "else:\n",
-        "  vae_path = os.path.join(vaes_dir, \"anime.vae.pt\")\n",
         "        \n",
         "os.chdir(repo_dir)\n",
         "\n",
@@ -632,8 +659,8 @@
         "  --enable-insecure-extension-access \\\n",
         "  --disable-safe-unpickle \\\n",
         "  --lora-dir {lora_dir} \\\n",
-        "  {\"--ckpt \" + model_path if os.path.exists(model_path) else \"\"} \\\n",
-        "  {\"--vae-path \" + vae_path if os.path.exists(vae_path) else \"\"} \\\n",
+        "  {\"--ckpt \" + model_path if auto_model and os.path.exists(model_path) else \"\"} \\\n",
+        "  {\"--vae-path \" + vae_path if auto_vae and os.path.exists(vae_path) else \"\"} \\\n",
         "  {\"--medvram\" if medvram else \"\"} \\\n",
         "  {\"--share\" if not ngrok_token else \"\"} \\\n",
         "  {\"--gradio-auth \" + user + \":\" + password if user and password else \"\"} \\\n",
@@ -666,7 +693,7 @@
         "\n",
         "use_drive = True #@param {type:\"boolean\"}\n",
         "folder_name = \"AI-generated Art\" #@param {type: \"string\"}\n",
-        "filename = \"replicant.zip\" #@param {type: \"string\"}\n",
+        "filename = \"waifu.zip\" #@param {type: \"string\"}\n",
         "save_as = filename \n",
         "\n",
         "if os.path.exists(filename):\n",
