feat: added an option to save outputs to drive

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -61,6 +61,7 @@
         "  <br>\n",
         "<font color=gray>v.1.2.2 (23/02/23)</font>\n",
         "  <ul>\n",
+        "    <li>Added an option to save outputs to drive.</li>\n",
         "    <li>Added <b>Extra</b> section for optional cell, the first cell added to the section is <b>Download Generated Images V2</b>, to store your output to huggingface and download it.</li>\n",
         "    <li>Changed how the installation works. If the folder exists, then skip unpacking.</li>\n",
         "    <li>Added <code>Replicant V1.0</code> as default model.</li>\n",
@@ -99,6 +100,8 @@
         "import shutil\n",
         "import zipfile\n",
         "import time\n",
+        "import json\n",
+        "from google.colab import drive\n",
         "from datetime import timedelta\n",
         "from subprocess import getoutput\n",
         "from IPython.display import clear_output, display, HTML\n",
@@ -138,6 +141,7 @@
         "try_new_ui_ux = True #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Repo Config\n",
+        "output_to_drive = False #@param {type:'boolean'}\n",
         "git_pull = False #@param {type:'boolean'}\n",
         "clean_install = False #@param {type:'boolean'}\n",
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
@@ -225,11 +229,6 @@
         "    !git pull\n",
         "    !git reset --hard 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
         "    del cap\n",
-        "  # temporary fix\n",
-        "  more2fill = \"/content/stable-diffusion-webui/html/svg/more-2-fill.svg\"\n",
-        "  \n",
-        "  if not os.path.exists(more2fill):\n",
-        "    shutil.copy(os.path.join(os.path.dirname(more2fill),\"cpu-fill.svg\"), more2fill)\n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  if git_pull:\n",
@@ -249,6 +248,28 @@
         "    !sed -i \"s@'cpu'@'cuda'@\" /content/stable-diffusion-webui/modules/extras.py\n",
         "  del cap\n",
         "\n",
+        "if output_to_drive:\n",
+        "  output_dir = \"/content/drive/MyDrive/WebUI/outputs\"\n",
+        "  \n",
+        "  if not os.path.exists('/content/drive/MyDrive'):\n",
+        "    print('\u001b[1;32mMounting google drive...')\n",
+        "    drive.mount('/content/drive')\n",
+        "else:\n",
+        "  output_dir = outputs_dir\n",
+        "\n",
+        "with open(os.path.join(repo_dir, \"config.json\"), \"r\") as f:\n",
+        "  data = json.load(f)\n",
+        "\n",
+        "data[\"outdir_txt2img_samples\"] = os.path.join(output_dir, \"txt2img-images\")\n",
+        "data[\"outdir_img2img_samples\"] = os.path.join(output_dir, \"img2img-images\")\n",
+        "data[\"outdir_extras_samples\"] = os.path.join(output_dir, \"extras-images\")\n",
+        "data[\"outdir_txt2img_grids\"] = os.path.join(output_dir, \"txt2img-grids\")\n",
+        "data[\"outdir_img2img_grids\"] = os.path.join(output_dir, \"img2img-grids\")\n",
+        "data[\"outdir_save\"] = os.path.join(output_dir, \"log/images\")\n",
+        "\n",
+        "with open(os.path.join(repo_dir, \"config.json\"), \"w\") as f:\n",
+        "  json.dump(data, f, indent=4)\n",
+        "  \n",
         "if pre_download_annotator:\n",
         "  for download in tqdm(annotator_url, desc='\u001b[1;32mPreparing ControlNet Annotator'):\n",
         "    basename = os.path.basename(download)\n",
@@ -637,7 +658,7 @@
         "silent_launch = True #@param {type: 'boolean'}\n",
         "auto_vae = False #@param {type: 'boolean'}\n",
         "auto_model = False #@param {type: 'boolean'}\n",
-        "fix_black_result = True #@param {type: 'boolean'}\n",
+        "no_half_vae = True #@param {type: 'boolean'}\n",
         "additional_args = \"--xformers\" #@param {type: 'string'}\n",
         "\n",
         "if auto_model:\n",
@@ -664,7 +685,7 @@
         "  {\"--medvram\" if medvram else \"\"} \\\n",
         "  {\"--share\" if not ngrok_token else \"\"} \\\n",
         "  {\"--gradio-auth \" + user + \":\" + password if user and password else \"\"} \\\n",
-        "  {\"--no-half-vae\" if fix_black_result else \"\"} \\\n",
+        "  {\"--no-half-vae\" if no_half_vae else \"\"} \\\n",
         "  {\"--lowram\" if load_in_vram else \"\"} \\\n",
         "  {\"--no-hashing\" if silent_launch else \"\"} \\\n",
         "  {\"--disable-console-progressbars\" if silent_launch else \"\"} \\\n",
